--- a/src/test/java/resources/application-test.yml
+++ b/src/test/java/resources/application-test.yml
@@ -1,7 +1,7 @@
 environment: test
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:testdb?allowPublicKeyRetrieval=true&useSSL=false
     username: test
     password: test
     driver-class-name: org.h2.Driver
